--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -10,19 +10,14 @@
         android:padding="16dp"
         >
 
-        <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:src="@drawable/avatar"
-            />
-
         <TextView
-            android:layout_marginTop="16dp"
+            android:id="@+id/textAlert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+            android:layout_marginTop="16dp"
 
-            />
+            android:text="Deseja Confirmar à Avaliação Perfeito para o Paciente?"
+            android:textSize="24sp" />
 
         <Button
             android:id="@+id/acceptButton"
@@ -30,12 +25,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Accept" />
+            android:text="Confirmar" />
         <Button
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="Cancelar"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:id="@+id/cancelButton"
             />
