--- a/app/src/main/res/layout/lista_itens_detalhes_exercicios.xml
+++ b/app/src/main/res/layout/lista_itens_detalhes_exercicios.xml
@@ -82,7 +82,7 @@
                         android:id="@+id/bt_aprovado"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Aprovado" />
+                        android:text="Perfeito" />
 
                     <Button
                         android:id="@+id/bt_melhorar"
