--- a/app/src/main/res/layout/lista_itens_licoes.xml
+++ b/app/src/main/res/layout/lista_itens_licoes.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -11,12 +13,15 @@
         <android.support.v7.widget.CardView
             android:id="@+id/cardViewLicao"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="15sp"
+            app:cardBackgroundColor="@color/cardview_shadow_end_color">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
+                android:background="@color/cardview_shadow_end_color"
                 android:orientation="vertical">
 
                 <TextView
@@ -25,6 +30,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
                     android:text="Nome Lição"
+                    android:textColor="@color/cardview_dark_background"
                     android:textSize="25sp" />
 
             </LinearLayout>
